Actualización de documentación

--- a/OnToology/PublicTransportRdf.owl/documentation/sections/abstract-en.html
+++ b/OnToology/PublicTransportRdf.owl/documentation/sections/abstract-en.html
@@ -1,1 +1,1 @@
-<h2>Abstract</h2><p>The abstract of your ontology goes here. 
+<h2>Abstract</h2><p>Ontología de ejemplo que modela el servicio de Transporte de Madrid. 
