--- a/OnToology/PublicTransportRdf.owl/documentation/index-en.html
+++ b/OnToology/PublicTransportRdf.owl/documentation/index-en.html
@@ -34,17 +34,17 @@ function loadHash() {
 		t = t.replace(' back to ToC','');
 	  });
 	  t+='</ul>';
-	  $("#toc").html(t); 
+	  $("#toc").html(t);
 }    $(function(){
-      $("#abstract").load("sections/abstract-en.html"); 
-      $("#introduction").load("sections/introduction-en.html"); 
-      $("#overview").load("sections/overview-en.html"); 
-      $("#description").load("sections/description-en.html"); 
-      $("#references").load("sections/references-en.html"); 
-      $("#crossref").load("sections/crossref-en.html", null, loadHash); 
+      $("#abstract").load("sections/abstract-en.html");
+      $("#introduction").load("sections/introduction-en.html");
+      $("#overview").load("sections/overview-en.html");
+      $("#description").load("sections/description-en.html");
+      $("#crossref").load("sections/crossref-en.html", null, loadHash);
+      $("#references").load("sections/references-en.html");
     });
-    </script> 
-  </head> 
+    </script>
+  </head>
 
 <body resource="http://www.semanticweb.org/paola/ontologies/2016/PublicTransport" typeOf="owl:Ontology schema:TechArticle">
 <span resource="" typeOf="foaf:Document schema:WebPage">
@@ -53,22 +53,30 @@ function loadHash() {
 <div class="container"><div class="head">
 <div style="float:right">language <a href="index-en.html"><b>en</b></a> </div>
 <dl><dt>Download serialization:</dt><dd><span><a href="ontology.n3" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples"></img></a> </span><span><a href="ontology.xml" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML"></img></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL"></img></a> </span></dd></dl><dl><dt>License: </dt><dd><a rel="license" href="http://insertlicenseURIhere.org" target="_blank"><img src ="https://img.shields.io/badge/License-license name goes here-blue.svg" alt="http://insertlicenseURIhere.org"></img></a>
-<span property="dc:license" resource="http://insertlicenseURIhere.org"></span>
-</dd></dl><dl><a href="provenance/provenance-en.html" target="_blank">Provenance of this page</a></dl><hr/>
+<span property="dc:license" resource="http://creativecommons.org/licenses/by/4.0/"></span>
+</dd><dl><a href="provenance/provenance-en.html">Click here</a> to see the provenance of this page.</dl><hr/>
 </div>
-<div class="status">
-<div>
-<span>Ontology Specification Draft</span>
 </div>
-</div>     <div id="abstract"></div>
-<div id="toc"></div>     <div id="introduction"></div>
+     <div id="abstract"></div>
+<div id="toc"><h2>Table of contents</h2>
+<ul>
+<li><a href="#introduction">1. Introduction</a></li>
+<ul><li><a href="#namespacedeclarations">1.1 Namespace declarations</a></li></ul>
+<li><a href="#overview">2. Vocabulario sobre Transporte: Overview</a></li>
+<li><a href="#description">3. Vocabulario de Transporte: Description</a></li>
+<li><a href="#crossref">4. Cross reference for Vocabulario de Transporte classes, properties and dataproperties</a></li>
+<li><a href="#references">5. References</a></li>
+<li><a href="#acknowledgements">6. Acknowledgements</a></li>
+</ul>
+</div>
+     <div id="introduction"></div>
      <div id="overview"></div>
      <div id="description"></div>
      <div id="crossref"></div>
      <div id="references"></div>
 <div id="acknowledgements">
-<h2 id="ack" class="list">Acknowledgements <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
-<p>The authors would like to thank <a href="http://www.essepuntato.it/">Silvio Peroni</a> for developing <a href="http://www.essepuntato.it/lode">LODE</a>, a Live OWL Documentation Environment, which is used for representing the Cross Referencing Section of this document and <a href="https://w3id.org/people/dgarijo">Daniel Garijo</a> for developing <a href="https://github.com/dgarijo/Widoco">Widoco</a>, the program used to create the template used in this documentation.</p>
+<h2>6. Acknowledgements <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
+<p>The authors would like to thank <a href="http://www.essepuntato.it/">Silvio Peroni</a> for developing <a href="http://www.essepuntato.it/lode">LODE</a>, a Live OWL Documentation Environment, which is used for representing the Cross Referencing Section of this document and <a href="http://purl.org/net/dgarijo/">Daniel Garijo</a> for developing <a href="https://github.com/dgarijo/Widoco">Widoco</a>, the program used to create the document template used in this documentation.</p>
 </div>
-</body> 
+</body>
 </html>
